The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.41.2 - November 2, 2010

    Defined a set of low-level utility predicates, available as public methods
    from the "logtalk" built-in object. Consult the User Manual for details on
    these predicates.

    Simplified and improved the performance of the predicate lookup caching
    code. Simplified and improved the performance of the built-in methods
    asserta/1 and assertz/1 when asserting a clause for a new predicate.
    Simplified the updating of the internal table for dynamically defined
    predicates when using the built-in methods retract/1 and retractall/1.
    Simplified compiler code used when creating new entities.

    Updated the Logtalk compiler in order to also delete the intermediate
    files generated by the back-end Prolog compilers when compiling the
    Prolog files generated by Logtalk with the "clean" flag is set to "on".

    Updated the built-in objects, "logtalk" and "debugger", and the built-in
    protocols, "expanding" and "monitoring", to support static binding.

    Updated the term-expansion mechanism implementation in order to support
    the use of the {}/1 compiler bypass control construct to wrap elements in
    the list of expanded terms (returned by the term_expansion/2 built-in
    method when used in hook objects), to allow expansion of the end_of_file
    term, and to throw an instantiation error when term-expansion generates a
    list containing an element that is a variable.

    Interpret "prolog_compatible_version", "tabling", and "coinduction" as
    read-only flags. Removed documentation on the deleted "multifile_directive"
    flag. Added missing documentation on the "prolog_compatible_version" flag.

    Added support for accessing the compiler input stream using the built-in
    predicate logtalk_load_context/2 with the key "stream".
