@@ -19,12 +19,19 @@ RELEASE NOTES
     from the "logtalk" built-in object. Consult the User Manual for details on
     these predicates.
 
+    Improved the performance of dynamic entity creation and of source file
+    compilation.
+
     Simplified and improved the performance of the predicate lookup caching
     code. Simplified and improved the performance of the built-in methods
     asserta/1 and assertz/1 when asserting a clause for a new predicate.
     Simplified the updating of the internal table for dynamically defined
     predicates when using the built-in methods retract/1 and retractall/1.
     Simplified compiler code used when creating new entities.
+
+    Updated the implementation of the built-in predicate logtalk_compile/2 in
+    order to ensure the same compiler options semantics for compiled code as
+    the built-in predicate logtalk_load/2.
 
     Updated the Logtalk compiler in order to also delete the intermediate
     files generated by the back-end Prolog compilers when compiling the
